INCLUDES = -I$(top_srcdir)/. -I$(top_srcdir)/src/settings $(all_includes)
METASOURCES = AUTO
libsettingswidget_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libsettingswidget.la
libsettingswidget_la_SOURCES = configdlg.cpp compilersettingswidget.cpp \
	parsersettingswidget.cpp debuggersettingswidget.cpp
noinst_HEADERS = configdlg.h compilersettingswidget.h parsersettingswidget.h \
	debuggersettingswidget.h
